examples/misc/error/compilation/module_import-not-found-absolute.bfr
// 絶対パスで存在しないファイルを指定した場合
open import "/absolute-path-that-does-not-exist"

let main = []